--- a/Challenge 3/style.css
+++ b/Challenge 3/style.css
@@ -12,10 +12,10 @@
   background-color: #23424a;
 }
 .content {
-  height: 80%;
+  max-height: 80%;
   padding: 5em 3em;
   color: white;
-  width: 50%;
+  max-width: 50%;
 }
 
 .content p {
