Revert "Change width and height to max-width and max-height"
This reverts commit 1935a51c1aaa0eb97583dc8edfd81343829a46ef.

--- a/Challenge 3/style.css
+++ b/Challenge 3/style.css
@@ -12,10 +12,10 @@
   background-color: #23424a;
 }
 .content {
-  max-height: 80%;
+  height: 80%;
   padding: 5em 3em;
   color: white;
-  max-width: 50%;
+  width: 50%;
 }
 
 .content p {
