Change background color of 3rd row

--- a/Flexbox Challenge 1/style.css
+++ b/Flexbox Challenge 1/style.css
@@ -59,8 +59,7 @@ h1 {
 }
 
 .wrapper {
-  background-color: #38cfd9;
-  color: white;
+  background-color: #136c72;
 }
 .hero {
   padding: 100px 0;
