--- a/Flexbox Challenge 3/style.css
+++ b/Flexbox Challenge 3/style.css
@@ -75,16 +75,17 @@ header {
 }
 
 .nav__list {
-  margin: 0;
-  padding: 0;
   list-style: none;
   display: flex;
+  justify-content: flex-start;
+  padding: 0.5em 0;
 }
 
 .nav__link {
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
+  margin: 0rem 2rem 0 0;
 }
 
 .nav__link--button {
