Style section one header

--- a/Flexbox Challenge 4/styles.css
+++ b/Flexbox Challenge 4/styles.css
@@ -35,3 +35,10 @@ body {
   justify-content: center;
   min-height: 660px;
 }
+
+.section__one h2 {
+  color: #824936;
+  font-size: ;
+}
+.container {
+}
