--- a/Flexbox Challenge 4/styles.scss
+++ b/Flexbox Challenge 4/styles.scss
@@ -1,3 +1,7 @@
+$black-pearl: #222c2a;
+$quarter-pearl: #f3eed9;
+$brown-red: #824936;
+
 *,
 *::before,
 *::after {
@@ -8,6 +12,17 @@ img {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  margin: 0;
+  // font-family: "Roboto", sans-serif;
+  font-family: cursi;
   font-size: 1.3125rem;
+  line-height: 1.6;
+  // color: $black-pearl;
+  color: red;
+}
+
+h1,
+h2 {
+  // font-family: "Playfair Display", serif;
+  margin-top: 0;
 }
