Get SCSS compiler working

--- a/Flexbox Challenge 4/styles.scss
+++ b/Flexbox Challenge 4/styles.scss
@@ -13,16 +13,15 @@ img {
 
 body {
   margin: 0;
-  // font-family: "Roboto", sans-serif;
-  font-family: cursi;
+  font-family: "Roboto", sans-serif;
+  // font-family: cursive;
   font-size: 1.3125rem;
   line-height: 1.6;
-  // color: $black-pearl;
-  color: red;
+  color: $black-pearl;
 }
 
 h1,
 h2 {
-  // font-family: "Playfair Display", serif;
+  font-family: "Playfair Display", serif;
   margin-top: 0;
 }
