--- a/Flexbox Challenge 4/styles.scss
+++ b/Flexbox Challenge 4/styles.scss
@@ -25,3 +25,21 @@ h2 {
   font-family: "Playfair Display", serif;
   margin-top: 0;
 }
+
+.intro {
+  background: $quarter-pearl;
+  text-align: center;
+  min-height: 660px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .intro__title {
+    font-size: 3.75rem;
+    color: $brown-red;
+  }
+  .intro__text {
+    margin: 0;
+    letter-spacing: 0.8rem;
+    text-transform: uppercase;
+  }
+}
