--- a/Flexbox Challenge 4/styles.css
+++ b/Flexbox Challenge 4/styles.css
@@ -24,6 +24,8 @@ h2 {
 
 .container {
   max-width: 1128px;
+  padding: 4em 0;
+  margin: 0 2.5rem;
 }
 
 .intro {
@@ -42,6 +44,12 @@ h2 {
 }
 .intro .intro__title {
   font-size: 3.75rem;
+  color: #824936;
+}
+
+.section-two h2 {
+  text-align: center;
+  font-size: 2.25rem;
   color: #824936;
 }
 
