Complete responsive layout for mobile

--- a/Flexbox Challenge 4/styles.css
+++ b/Flexbox Challenge 4/styles.css
@@ -56,4 +56,9 @@ h2 {
 .section-three {
   background-color: #222c2a;
   color: #f3eed9;
+}
+
+.section-four {
+  background-color: #824936;
+  color: #f3eed9;
 }/*# sourceMappingURL=styles.css.map */
