--- a/Flexbox Challenge 4/styles.scss
+++ b/Flexbox Challenge 4/styles.scss
@@ -63,3 +63,8 @@ h2 {
   background-color: $black-pearl;
   color: $quarter-pearl;
 }
+
+.section-four {
+  background-color: $brown-red;
+  color: $quarter-pearl;
+}
