--- a/Final Challenge/style.css
+++ b/Final Challenge/style.css
@@ -1,3 +1,9 @@
-body {
-  font-family: "Oswald", sans-serif;
+* {
+  box-sizing: border-box;
+}
+*::before {
+  box-sizing: border-box;
+}
+*::after {
+  box-sizing: border-box;
 }/*# sourceMappingURL=style.css.map */
