--- a/Final Challenge/style.scss
+++ b/Final Challenge/style.scss
@@ -1,3 +1,14 @@
+* {
+  box-sizing: border-box;
+  &::before {
+    box-sizing: border-box;
+  }
+  &::after {
+    box-sizing: border-box;
+  }
+}
+
 body {
-    font-family: 'Oswald', sans-serif;
+    // font-family: 'Oswald', sans-serif;
+    // font-family: 'Montserrat', sans-serif;
 }
