--- a/Final Challenge/style.css
+++ b/Final Challenge/style.css
@@ -20,17 +20,22 @@ nav {
   background-color: #2E323F;
 }
 nav p {
-  padding: 1rem;
+  padding: 0 1rem;
 }
 nav ul {
   display: flex;
   text-transform: uppercase;
   list-style: none;
 }
-nav ul li {
-  padding-left: 1rem;
-}
 nav ul a {
+  margin: 0 0.25rem;
+  padding: 0 1rem;
+  border-radius: 16px;
   text-decoration: none;
   color: #6F737F;
+  display: block;
+}
+nav ul a:hover {
+  color: white;
+  background-color: #A59678;
 }/*# sourceMappingURL=style.css.map */
