--- a/Final Challenge/style.scss
+++ b/Final Challenge/style.scss
@@ -14,6 +14,16 @@ $brown: #a59678;
   }
 }
 
+body{
+  margin: 0;
+  padding: 0;
+  font-family: "Oswald", sans-serif;
+}
+
+img{
+  max-width: 100%;
+}
+
 .nav-container {
   // display: flex;
   margin: 1rem;
@@ -25,17 +35,21 @@ nav {
   display: flex;
   font-family: "Oswald", sans-serif;
   font-size: 18px;
-  p {
+  .logo {
     padding: 0 1rem;
+
   }
   // font-family: 'Oswald', sans-serif;
   // font-family: 'Montserrat', sans-serif;
-
+  .nav-links {
+    display: flex;
+    // width: 100%;
+    // border: solid red 3px;
+    height: 100%;
+  }
   ul {
     display: flex;
     text-transform: uppercase;
-    li {
-    }
     list-style: none;
     a {
       margin: 0 0.25rem;
@@ -52,21 +66,46 @@ nav {
     }
   }
 
-  .toggle-button {
-    position: absolute;
-    top: 2.3rem;
-    right: 3rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 21px;
+}
+.toggle-button {
+  display: none;
+  position: absolute;
+  top: 2.3rem;
+  right: 3rem;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
 
-    .bar {
-      height: 3px;
-      width: 100%;
-      background-color: white;
-      border-radius: 10px;
-    }
+  .bar {
+    height: 3px;
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
+  }
+}
+
+@media (max-width: 700px) {
+  nav {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .toggle-button {
+    display: flex;
+  }
+  .nav-links {
+    display: none;
+    width: 100%;
+  }
+  .nav-links ul li {
+    text-align: center;
+  }
+
+  .nav-links ul li a {
+    padding: 0.5rem 1rem;
+  }
+
+  .nav-links.active {
+    display: flex;
   }
 }
